news page slider

--- a/css/sass/components/_normalize.scss
+++ b/css/sass/components/_normalize.scss
@@ -41,6 +41,11 @@ span
 {
     vertical-align: middle;
 }
+figure
+{
+    position: relative;
+    height: 100%;
+}
 .container-fluid
 {
     position:relative;
