--- a/css/sass/form/_button.scss
+++ b/css/sass/form/_button.scss
@@ -12,6 +12,22 @@
     	background-color: $text-color;
     }
 }
+.btn-post
+{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	background-color: $white-color;
+	color:$text-color;
+	padding: 1em;
+	width: 35%;
+	text-transform: uppercase;
+	@include border-radius(0);
+	&:hover
+	{
+    	background-color: $main-color2;
+	}
+}
 /*======================
 ====== end buttons style =======
 ======================*/
