--- a/css/sass/news.scss
+++ b/css/sass/news.scss
@@ -14,8 +14,7 @@ $dir:ltr;
 @import './layout/preload',
 		'./layout/nav',
 		'./layout/header',
-		'./layout/slider',
-		'./layout/main',
+		'./layout/news',
 		'./layout/footer';
 		
 		
