--- a/css/sass/layout/main/_news.scss
+++ b/css/sass/layout/main/_news.scss
@@ -3,6 +3,7 @@
 ======================*/
 .news
 {
+	height: 100%;
 	img
 	{
 		object-fit: cover;
@@ -140,13 +141,15 @@
 			height: 25%;
 		}
 	}
-	#news-slider
+	#news-slider,
+	#post-slider
 	{
 		min-height: 600px;
 		height:600px;
 		height:100%;
 	}
-	#blog-slider
+	#blog-slider,
+	#post-slider
 	{
 		.carousel-indicators
 		{
@@ -166,10 +169,43 @@
 			left: 20px;
 			bottom: 20px;
 			text-transform: uppercase;
-			font-size: 1.5em;
+			font-size: 1em;
 			word-spacing: 5px;
 			padding: 10px 0;
 			overflow: hidden;
+		}
+	}
+	#post-slider
+	{
+		.carousel-control
+		{
+			position: absolute;
+			bottom: 10px;
+			left: 0;
+			right: 50%;
+			height: 50px;
+			text-align: center;
+		}
+		.carousel-control-prev
+		{
+			left:25%;
+		}
+		.carousel-control-next
+		{
+			right:25%;
+		}
+		.carousel-control-next,
+		.carousel-control-prev
+		{
+			z-index:999;
+		}
+		figcaption
+		{
+			color: $white-color;
+			left: 15%;
+			right: 15%;
+			bottom: 100px;
+			height: auto;
 		}
 	}
 }
