--- a/css/news.css
+++ b/css/news.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*=== start default style */
 *,
 *::before,
@@ -62,7 +61,7 @@ html, body {
   font-family: "Raleway", sans-serif;
 }
 
-.news .trending:before, .slider .socal-links:after, nav .nav-item, h1,
+.news .trending:before, nav .nav-item, h1,
 h2,
 h3,
 h4,
@@ -384,296 +383,26 @@ header .search {
 /*======================
 ====== end header =======
 ======================*/
-.slider {
-  height: 50%;
-  top: -25%;
-  position: relative;
-  z-index: 99;
-}
-.slider .carousel {
-  display: inline-block;
-  width: 75%;
-  height: 100%;
-  overflow: hidden;
-}
-.slider .carousel-item {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 8;
-  height: 100%;
-  -webkit-transform: translate(-100%);
-  -o-transform: translate(-100%);
-  -moz-transform: translate(-100%);
-  -ms-transform: translate(-100%);
-  transform: translate(-100%);
-  -webkit-transition: transform 0.3s ease-in-out;
-  -o-transition: transform 0.3s ease-in-out;
-  -moz-transition: transform 0.3s ease-in-out;
-  -ms-transition: transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out;
-}
-.slider .carousel-item.active {
-  z-index: 9;
-  -webkit-transform: translate(0);
-  -o-transform: translate(0);
-  -moz-transform: translate(0);
-  -ms-transform: translate(0);
-  transform: translate(0);
-}
-.slider .carousel-item.active ~ .carousel-item {
-  -webkit-transform: translate(100%);
-  -o-transform: translate(100%);
-  -moz-transform: translate(100%);
-  -ms-transform: translate(100%);
-  transform: translate(100%);
-}
-.slider figure {
-  width: 75%;
-  position: relative;
-  height: 100%;
-  display: block;
-  background-color: #fff;
-}
-.slider figure img {
-  width: 100%;
-  height: 100%;
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-  -webkit-object-fit: cover;
-  -o-object-fit: cover;
-  -moz-object-fit: cover;
-  -ms-object-fit: cover;
-  object-fit: cover;
-}
-.slider figcaption {
-  position: absolute;
-  top: 25%;
-  left: -50px;
-  color: #1a1a1d;
-}
-.slider figcaption h2 {
-  margin-bottom: 10px;
-  font-size: 3rem;
-  letter-spacing: 10px;
-}
-.slider .socal-links {
-  position: relative;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 auto;
-  -ms-flex: 1 0 auto;
-  flex: 1 0 auto;
-}
-.slider .socal-links .line {
-  display: block;
-  width: 2px;
-  height: 15%;
-  background-color: #1a1a1d;
-  margin: 2em 1.5em;
-}
-.slider .socal-links:after {
-  content: attr(data-number);
-  padding: 0.5em 1em;
-  display: inline-block;
-  -webkit-transform: rotate(-90deg);
-  -o-transform: rotate(-90deg);
-  -moz-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-}
-.slider .socal-links .list-group-item {
-  background: none;
-  font-size: 1em;
-  border: none;
-  padding: 0.5em 1em;
-}
-.slider .socal-links .btn {
-  position: absolute;
-  bottom: -1px;
-  width: 100%;
-  height: 50px;
-  left: 0;
-  z-index: 99;
-  padding: 0;
-  border-radius: 0;
-  margin: 0;
-}
-.slider .socal-links .btn:hover:after {
-  background-color: #c3dbdb;
-}
-.slider .socal-links .btn:hover span {
-  background-color: #1a1a1d;
-}
-.slider .socal-links .btn span {
-  background-color: #b4d3d3;
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  line-height: 50px;
-  color: #fff;
-  -webkit-transition: background 0.2s ease;
-  -o-transition: background 0.2s ease;
-  -moz-transition: background 0.2s ease;
-  -ms-transition: background 0.2s ease;
-  transition: background 0.2s ease;
-}
-.slider .socal-links .btn:after {
-  content: "";
-  width: 50%;
-  height: 100%;
-  background-color: #fff;
-  margin-left: -5px;
-  vertical-align: top;
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  padding-top: 15px;
-  font-size: 24px;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-transition: background 0.2s ease;
-  -o-transition: background 0.2s ease;
-  -moz-transition: background 0.2s ease;
-  -ms-transition: background 0.2s ease;
-  transition: background 0.2s ease;
-}
-.slider .carousel-dota {
-  width: 24%;
-  display: inline-block;
-  height: 100%;
-  vertical-align: top;
-  position: relative;
-}
-.slider .carousel-indicators {
-  display: block;
-  margin: 0;
-  padding-left: 2em;
-}
-.slider .carousel-indicators li {
-  text-indent: 0px;
-  margin: 1em 0;
-  width: auto;
+/*======================
+====== start news page style=======
+======================*/
+nav {
   height: auto;
-  background: none;
-  cursor: pointer;
-  color: #1a1a1d;
-  letter-spacing: 5px;
 }
-.slider .carousel-indicators li.active {
-  background: none;
+nav .navbar-collapse {
+  right: 2em;
 }
-.slider .carousel-indicators li:after, .slider .carousel-indicators li:before {
-  display: none;
-  position: static;
+nav #search {
+  border-left: 1px solid rgba(26, 26, 29, 0.5);
 }
-.slider .carousel-indicators li.active:after {
-  display: inline-block;
-  background: none;
-  width: 20%;
-  height: 2px;
-  margin-left: 20px;
-  background-color: #1a1a1d;
-  vertical-align: middle;
+nav #search input {
+  -webkit-transform: scale(1);
+  -o-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
 }
 
-/*======================
-====== start main page style=======
-======================*/
-/*======================
-====== start clients =======
-======================*/
-.clients .list-inline-item {
-  padding: 0.5em 1em;
-  color: rgba(26, 26, 29, 0.5);
-  text-transform: uppercase;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: transparent;
-  -webkit-transition: color 0.2s ease, border 0.2s ease;
-  -o-transition: color 0.2s ease, border 0.2s ease;
-  -moz-transition: color 0.2s ease, border 0.2s ease;
-  -ms-transition: color 0.2s ease, border 0.2s ease;
-  transition: color 0.2s ease, border 0.2s ease;
-}
-.clients .list-inline-item:hover, .clients .list-inline-item.active {
-  border-bottom-color: #1a1a1d;
-  color: #1a1a1d;
-}
-.clients .list-inline-item button {
-  text-transform: inherit;
-  color: inherit;
-}
-.clients figure {
-  margin: 0;
-}
-.clients figure img {
-  width: 100%;
-  height: 250px;
-}
-.clients figure:hover figcaption {
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
-.clients figcaption {
-  background-color: rgba(180, 211, 211, 0.5);
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 100%;
-  width: 100%;
-  text-align: right;
-  padding: 1em;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transition: opacity 0.3s ease-in-out;
-  -o-transition: opacity 0.3s ease-in-out;
-  -moz-transition: opacity 0.3s ease-in-out;
-  -ms-transition: opacity 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out;
-}
-.clients .client-link {
-  display: inline-block;
-  background-color: #fff;
-  color: #1a1a1d;
-  padding: 8px 12px;
-  -webkit-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-}
-.clients .client-title {
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top: auto;
-  width: 100%;
-  padding: 1em;
-  color: #fff;
-}
-.clients .client-title h4 {
-  margin-bottom: 5px;
-}
-.clients .btn {
-  margin: 0 auto;
-  display: block;
-  margin-top: 50px;
-  padding: 0.5em 1em;
-  -webkit-border-radius: 25px;
-  -moz-border-radius: 25px;
-  border-radius: 25px;
-}
-
-/*======================
-====== end clients =======
-======================*/
 /*======================
 ====== start stories =======
 ======================*/
@@ -923,21 +652,8 @@ header .search {
 /*======================
 ====== end news =======
 ======================*/
-.time {
-  color: rgba(26, 26, 29, 0.5);
-  margin-top: 10px;
-  display: inline-block;
-  text-transform: capitalize;
-  font-size: 0.8rem;
-  position: absolute;
-  top: auto;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
 /*======================
-====== end main page style=======
+====== end news page style=======
 ======================*/
 /*======================
 ====== start footer =======
@@ -1072,4 +788,4 @@ footer .links {
 ====== end buttons style =======
 ======================*/
 
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=news.css.map */
