--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -14,7 +14,7 @@ $dir:ltr;
 @import './layout/preload',
 		'./layout/nav',
 		'./layout/header',
-		'./layout/slider',
+		'./layout/time',
 		'./layout/main',
 		'./layout/footer';
 		
