--- a/css/sass/components/_typography.scss
+++ b/css/sass/components/_typography.scss
@@ -10,7 +10,7 @@
 html, body
 {
     font-size: 16px;
-    height:100%;
+    min-height:100%;
     text-align: #{$left};
     @extend %fontfamily;
 }
