--- a/css/sass/layout/_main.scss
+++ b/css/sass/layout/_main.scss
@@ -1,22 +1,10 @@
 /*======================
 ====== start main page style=======
 ======================*/
-@import './main/clients',
+@import './main/slider',
+		'./main/clients',
  		'./main/stories',
 		'./main/news';
-.time
-{
-	color:rgba($text-color,0.5);
-	margin-top: 10px;
-	display: inline-block;
-	text-transform: capitalize;
-	font-size: 0.8rem;
-	position: absolute;
-    top: auto;
-    bottom: 0;
-    #{$left}: 0;
-    #{$right}: 0;
-}
 /*======================
 ====== end main page style=======
 ======================*/
