--- a/css/sass/news.scss
+++ b/css/sass/news.scss
@@ -14,6 +14,7 @@ $dir:ltr;
 @import './layout/preload',
 		'./layout/nav',
 		'./layout/header',
+		'./layout/time',
 		'./layout/news',
 		'./layout/footer';
 		
