--- a/css/sass/index.scss
+++ b/css/sass/index.scss
@@ -15,10 +15,11 @@ $dir:ltr;
 		'./layout/nav',
 		'./layout/header',
 		'./layout/time',
-		'./layout/main',
+		'./layout/index/slider',
+		'./layout/index/clients',
+		'./layout/index/stories',
+		'./layout/index/news',
 		'./layout/footer';
-		
-		
 //form
 @import './form/form',
 		'./form/button';
