--- a/css/index.css
+++ b/css/index.css
@@ -384,7 +384,13 @@ header .search {
 /*======================
 ====== end header =======
 ======================*/
-.time {
+section .title-h {
+  border-bottom: 1px solid;
+  padding-bottom: 1em;
+  text-align: center;
+  display: inline-block;
+}
+section .time {
   color: rgba(26, 26, 29, 0.5);
   margin-top: 10px;
   display: inline-block;
@@ -395,6 +401,16 @@ header .search {
   bottom: 0;
   left: 0;
   right: 0;
+}
+section .page-link {
+  line-height: 1.5;
+  color: rgba(26, 26, 29, 0.5);
+  background-color: transparent;
+  border: none;
+}
+section .page-link:hover {
+  color: #1a1a1d;
+  background-color: transparent;
 }
 
 .slider {
@@ -678,6 +694,32 @@ header .search {
   -moz-border-radius: 25px;
   border-radius: 25px;
 }
+.clients .clients-indicators .carousel-indicators {
+  position: static;
+}
+.clients .clients-indicators li {
+  width: 15px;
+  height: 15px;
+  background-color: rgba(26, 26, 29, 0.5);
+  cursor: pointer;
+  margin: 0 5px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  transform: scale(0.8);
+}
+.clients .clients-indicators li:hover, .clients .clients-indicators li.active {
+  background-color: #c3dbdb;
+  -webkit-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
 
 /*======================
 ====== end clients =======
@@ -687,12 +729,6 @@ header .search {
 ======================*/
 .stories {
   text-align: center;
-}
-.stories .title-h {
-  border-bottom: 1px solid;
-  padding-bottom: 1em;
-  text-align: center;
-  display: inline-block;
 }
 .stories .media {
   margin-bottom: 10px;
@@ -813,9 +849,19 @@ header .search {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  transform: scale(0.8);
 }
 .news .carousel-indicators li.active, .news .carousel-indicators li:hover {
   background-color: #fff;
+  -webkit-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 .news .carousel-item {
   display: block;
