--- a/css/news.css
+++ b/css/news.css
@@ -383,7 +383,13 @@ header .search {
 /*======================
 ====== end header =======
 ======================*/
-.time {
+section .title-h {
+  border-bottom: 1px solid;
+  padding-bottom: 1em;
+  text-align: center;
+  display: inline-block;
+}
+section .time {
   color: rgba(26, 26, 29, 0.5);
   margin-top: 10px;
   display: inline-block;
@@ -395,18 +401,22 @@ header .search {
   left: 0;
   right: 0;
 }
+section .page-link {
+  line-height: 1.5;
+  color: rgba(26, 26, 29, 0.5);
+  background-color: transparent;
+  border: none;
+}
+section .page-link:hover {
+  color: #1a1a1d;
+  background-color: transparent;
+}
 
 /*======================
 ====== start stories =======
 ======================*/
 .stories {
   text-align: center;
-}
-.stories .title-h {
-  border-bottom: 1px solid;
-  padding-bottom: 1em;
-  text-align: center;
-  display: inline-block;
 }
 .stories .media {
   margin-bottom: 10px;
@@ -527,9 +537,19 @@ header .search {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  transform: scale(0.8);
 }
 .news .carousel-indicators li.active, .news .carousel-indicators li:hover {
   background-color: #fff;
+  -webkit-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 .news .carousel-item {
   display: block;
@@ -650,6 +670,125 @@ header .search {
 /*======================
 ====== end news =======
 ======================*/
+/*======================
+====== start clients =======
+======================*/
+.clients .list-inline-item {
+  padding: 0.5em 1em;
+  color: rgba(26, 26, 29, 0.5);
+  text-transform: uppercase;
+  border-bottom: 1px solid transparent;
+  -webkit-transition: color 0.2s ease, border 0.2s ease;
+  -o-transition: color 0.2s ease, border 0.2s ease;
+  -moz-transition: color 0.2s ease, border 0.2s ease;
+  -ms-transition: color 0.2s ease, border 0.2s ease;
+  transition: color 0.2s ease, border 0.2s ease;
+}
+.clients .list-inline-item:hover, .clients .list-inline-item.active {
+  border-bottom-color: #1a1a1d;
+  color: #1a1a1d;
+}
+.clients .list-inline-item button {
+  text-transform: inherit;
+  color: inherit;
+}
+.clients figure {
+  margin: 0;
+}
+.clients figure img {
+  width: 100%;
+  height: 250px;
+}
+.clients figure:hover figcaption {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+.clients figcaption {
+  background-color: rgba(180, 211, 211, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  text-align: right;
+  padding: 1em;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  -moz-transition: opacity 0.3s ease-in-out;
+  -ms-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+.clients .client-link {
+  display: inline-block;
+  background-color: #fff;
+  color: #1a1a1d;
+  padding: 8px 12px;
+  -webkit-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.clients .client-title {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: auto;
+  width: 100%;
+  padding: 1em;
+  color: #fff;
+}
+.clients .client-title h4 {
+  margin-bottom: 5px;
+}
+.clients .btn {
+  margin: 0 auto;
+  display: block;
+  margin-top: 50px;
+  padding: 0.5em 1em;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
+}
+.clients .clients-indicators .carousel-indicators {
+  position: static;
+}
+.clients .clients-indicators li {
+  width: 15px;
+  height: 15px;
+  background-color: rgba(26, 26, 29, 0.5);
+  cursor: pointer;
+  margin: 0 5px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  transform: scale(0.8);
+}
+.clients .clients-indicators li:hover, .clients .clients-indicators li.active {
+  background-color: #c3dbdb;
+  -webkit-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+/*======================
+====== end clients =======
+======================*/
 nav {
   height: auto;
 }
@@ -665,16 +804,6 @@ nav #search input {
   -moz-transform: scale(1);
   -ms-transform: scale(1);
   transform: scale(1);
-}
-
-.pagination .page-link {
-  line-height: 1.5;
-  color: rgba(26, 26, 29, 0.5);
-  background-color: transparent;
-  border: none;
-}
-.pagination .page-link:hover {
-  color: #1a1a1d;
 }
 
 /*======================
