--- a/css/sass/layout/index/_clients.scss
+++ b/css/sass/layout/index/_clients.scss
@@ -87,6 +87,30 @@
 	    padding: 0.5em 1em;
 	    @include border-radius(25px);
 	}
+	.clients-indicators
+	{
+		.carousel-indicators
+		{
+			position: static;
+		}
+		li
+		{
+			width: 15px;
+			height: 15px;
+			background-color: rgba($text-color,0.5);
+			cursor: pointer;
+			margin:0 5px;
+			@include border-radius(50%);
+			@include scale(0.8);
+			&:hover,
+			&.active
+			{
+				background-color: $main-color;
+				@include scale(1.1);
+			}
+			
+		}
+	}
 }
 /*======================
 ====== end clients =======
