--- a/css/sass/news.scss
+++ b/css/sass/news.scss
@@ -10,15 +10,19 @@ $dir:ltr;
 		'./components/mixin',
 		'./components/normalize',
 		'./components/typography';
+
+
+//module
+@import './module/preload';
+
 //layout
-@import './layout/preload',
-		'./layout/nav',
+@import './layout/nav',
 		'./layout/header',
-		'./layout/time',
+		'./layout/section',
 		'./layout/index/stories',
 		'./layout/index/news',
+		'./layout/index/clients',
 		'./layout/news/nav',
-		'./layout/news/pagination',
 		'./layout/footer';
 		
 //form
