--- a/css/index.css
+++ b/css/index.css
@@ -685,6 +685,9 @@ section .page-link:hover {
 .clients .client-title h4 {
   margin-bottom: 5px;
 }
+.clients .client-title span {
+  text-transform: uppercase;
+}
 .clients .btn {
   margin: 0 auto;
   display: block;
@@ -694,10 +697,43 @@ section .page-link:hover {
   -moz-border-radius: 25px;
   border-radius: 25px;
 }
-.clients .clients-indicators .carousel-indicators {
+.clients .clients-slider .carousel-inner {
+  height: 250px;
+}
+.clients .clients-slider .carousel-item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  -webkit-transform: translate(-100%);
+  -o-transform: translate(-100%);
+  -moz-transform: translate(-100%);
+  -ms-transform: translate(-100%);
+  transform: translate(-100%);
+  -webkit-transition: transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out;
+  -moz-transition: transform 0.3s ease-in-out;
+  -ms-transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+}
+.clients .clients-slider .carousel-item.active {
+  -webkit-transform: translate(0);
+  -o-transform: translate(0);
+  -moz-transform: translate(0);
+  -ms-transform: translate(0);
+  transform: translate(0);
+}
+.clients .clients-slider .carousel-item.active ~ .carousel-item {
+  -webkit-transform: translate(100%);
+  -o-transform: translate(100%);
+  -moz-transform: translate(100%);
+  -ms-transform: translate(100%);
+  transform: translate(100%);
+}
+.clients .clients-slider .carousel-indicators {
   position: static;
 }
-.clients .clients-indicators li {
+.clients .clients-slider .carousel-indicators li {
   width: 15px;
   height: 15px;
   background-color: rgba(26, 26, 29, 0.5);
@@ -712,7 +748,7 @@ section .page-link:hover {
   -ms-transform: scale(0.8);
   transform: scale(0.8);
 }
-.clients .clients-indicators li:hover, .clients .clients-indicators li.active {
+.clients .clients-slider .carousel-indicators li:hover, .clients .clients-slider .carousel-indicators li.active {
   background-color: #c3dbdb;
   -webkit-transform: scale(1.1);
   -o-transform: scale(1.1);
