--- a/css/sass/layout/_nav.scss
+++ b/css/sass/layout/_nav.scss
@@ -81,6 +81,14 @@ nav
     	}
     }
 }
+@include media($max_mid)
+{
+    nav
+    {
+        width:100%;
+        @include flex(0, 0, 100%);
+    }
+}
 /*======================
 ====== end nav =======
 ======================*/
