--- a/css/sass/layout/index/_slider.scss
+++ b/css/sass/layout/index/_slider.scss
@@ -154,7 +154,7 @@
 		li
 		{
 			text-indent:0px;
-			margin: 1em 0;
+			padding: 0.5em 0;
 			width: auto;
 			height: auto;
 			background: none;
@@ -180,6 +180,76 @@
 			    margin-#{$left}:20px;
 			    background-color: $text-color;
 			    vertical-align: middle;
+			}
+		}
+	}
+}
+//fixed media
+@include media($max_mid)
+{
+	.slider 
+	{
+		.carousel-indicators
+		{
+			padding:0;
+		}
+		position: static;
+		top:0;
+		height: 80%;
+		.carousel
+		{
+			width:100%;
+		}
+		figure,
+		.socal-links
+		{
+			width:100%;
+			height: 80%;
+		}
+		figcaption
+		{
+		    top: 10px;
+		    #{$left}: 10px;
+		}
+		.carousel-dota
+		{
+			text-align: center;
+			height:auto;
+			width:100%;
+			li
+			{
+				display: inline-block;
+				padding:10px;
+				&.active:after
+				{
+					display:none;
+				}
+				&.active
+				{
+					color: $main-color;
+				}
+			}
+		}
+		.socal-links
+		{
+			position: absolute;
+		    left: 0;
+		    top: 0;
+		    z-index: 99;
+		    right: 0;
+			.line,
+			&:after,
+			.list-group-item
+			{
+				display: none;
+			}
+			.btn
+			{
+			    bottom: -1px;
+				&:after
+				{
+					display: none;
+				}
 			}
 		}
 	}
