add pug components

--- a/css/sass/layout/_nav.scss
+++ b/css/sass/layout/_nav.scss
@@ -55,7 +55,8 @@ nav
         color: rgba($text-color,0.5);
         @include transition(color 0.2s ease);
         @extend %fontheading;
-        &:hover
+        &:hover,
+        &.active
         {
             color: $text-color;
         }
