--- a/pug/components/var.pug
+++ b/pug/components/var.pug
@@ -12,4 +12,25 @@
 - const navItems = [{title:'clients', href:'clients.html'},{title:'news', href:'news.html'}]
 
 
-- const sliderList = [{img:{src:'./img/slider-1.jpg',title:'slider-1', alt:'alt-1'}, name:'derek<br/>anderson', job:'british comedian',id:'slider1'},{img:{src:'./img/slider-2.jpg',title:'slider-2', alt:'alt-2'}, name:'ahmed<br/>samir', job:'british comedian',id:'slider2'},{img:{src:'./img/slider-3.jpg',title:'slider-3', alt:'alt-3'}, name:'super<br/>anderson', job:'british hero',id:'slider3'},{img:{src:'./img/slider-4.jpg',title:'slider-4', alt:'alt-4'}, name:'derek<br/>anderson', job:'british comedian',id:'slider4'}]
+- const sliderList = [{img:'./img/slider-1.jpg', name:'derek<br/>anderson', job:'british comedian',id:'slider1'},{img:'./img/slider-2.jpg', name:'ahmed<br/>samir', job:'british comedian',id:'slider2'},{img:'./img/slider-3.jpg', name:'super<br/>anderson', job:'british hero',id:'slider3'},{img:'./img/slider-4.jpg', name:'derek<br/>anderson', job:'british comedian',id:'slider4'}]
+
+
+
+- const clientsFilter = ['all', 'actor', 'musician', 'comdian', 'model']
+- const clients = [{id:"#!",job:'comdian', name:'keith ruiz', img:'./img/slider-1.jpg'}, {id:"#!",job:'actor', name:'ahmed ruiz', img:'./img/slider-2.jpg'}, {id:"#!",job:'musician', name:'super ahmed', img:'./img/slider-3.jpg'}, {id:"#!",job:'model', name:'super hero', img:'./img/slider-4.jpg'}, {id:"#!",job:'comdian', name:'keith ruiz', img:'./img/slider-1.jpg'}, {id:"#!",job:'actor', name:'ahmed ruiz', img:'./img/slider-2.jpg'}, {id:"#!",job:'musician', name:'super ahmed', img:'./img/slider-3.jpg'}, {id:"#!",job:'model', name:'super hero', img:'./img/slider-4.jpg'}]
+
+
+
+- const storiesList = [{id:'#!', img:'./img/slider-1.jpg', title: '5 reasons to keep your beauty salon reservation', time:'8 march, 2020'}, {id:'#!', img:'./img/slider-2.jpg', title: 'benjamin franklin method of habit formation', time:'8 march, 2023'}, {id:'#!', img:'./img/slider-3.jpg', title: '29 mativational quotes for business', time:'8 march, 2022'}]
+
+
+
+
+- const trending = {id:'#!', img:'./img/slider-1.jpg', title: 'use your reset button to change your vibration', time:'8 march, 2020'}
+- const newsList = [{id:'#!', img:'./img/slider-1.jpg', title: '5 reasons to keep your beauty salon reservation', time:'8 march, 2020'}, {id:'#!', img:'./img/slider-2.jpg', title: 'benjamin franklin method of habit formation', time:'8 march, 2023'}, {id:'#!', img:'./img/slider-3.jpg', title: '29 mativational quotes for business', time:'8 march, 2022'}]
+
+
+
+
+
+
