--- a/pug/layout/slider.pug
+++ b/pug/layout/slider.pug
@@ -23,7 +23,7 @@ div(class="slider d-flex")
 						a(class="btn text-uppercase" href=`${slider.id}`)
 							span view profile
 					figure
-						img(src=`${slider.img.src}` title=`${slider.img.title}` alt=`${slider.img.alt}`)/
+						img(src=`${slider.img}` title=`${slider.name}` alt=`${slider.job}`)/
 						figcaption
 							h2!= `${slider.name}`
 							p= `${slider.job}`
