--- a/pug/news.pug
+++ b/pug/news.pug
@@ -4,7 +4,7 @@ html
 	head
 		include components/head
 		// index style
-		link(rel="stylesheet" type="text/css" href="css/index.css")
+		link(rel="stylesheet" type="text/css" href="css/news.css")
 	body
 		include components/preload
 		// =======================
@@ -16,7 +16,6 @@ html
 				| your browser is old
 
 			include layout/header
-			include layout/main
 			include components/footer
 		// =======================
 			end container
