--- a/pug/layout/news/trending.pug
+++ b/pug/layout/news/trending.pug
@@ -9,5 +9,5 @@ div(class="trending")
 				div(class="trending-title")
 					<i class="fa fa-play" aria-hidden="true"></i>
 					h3(class="mt-4 mb-4")= `${trending.title}`
-					time(class="time")= `${trending.time}`
+					time(class="time" datetime="2020-07-08")= `${trending.time}`
 // end trending
