--- a/pug/layout/stories.pug
+++ b/pug/layout/stories.pug
@@ -15,6 +15,6 @@ section(class="stories pt-5 pb-5")
 								<i class="fa fa-play" aria-hidden="true"></i>
 						div(class="media-body text-left")
 							h3(class="mt-0")= `${stories.title}`
-							time(class="time")= `${stories.time}`
+							time(class="time" datetime="2020-07-08")= `${stories.time}`
 		// ======== end stories grid =======
 // ===== end stories=========
