--- a/pug/components/head.pug
+++ b/pug/components/head.pug
@@ -1,7 +1,7 @@
 // meta character set
 meta(charset="utf-8")
 //  Always force latest IE rendering engine or request Chrome Frame
-meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
+meta(http-equiv="X-UA-Compatible" content="IE=edge")
 //  Mobile Specific Meta
 meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
 meta(name="theme-color" content=`${themeColor}`)
