--- a/pug/layout/news/news-blog.pug
+++ b/pug/layout/news/news-blog.pug
@@ -7,5 +7,5 @@ div(class="news-blog")
 			title=`${news.title}`)
 		figcaption
 			h4= `${news.title}`
-			time(class="time")= `${news.time}`
+			time(class="time" datetime="2020-07-08")= `${news.time}`
 // ====== end news blog
