--- a/css/sass/index.scss
+++ b/css/sass/index.scss
@@ -19,10 +19,10 @@ $dir:ltr;
 @import './layout/nav',
 		'./layout/header',
 		'./layout/section',
-		'./layout/index/slider',
-		'./layout/index/clients',
-		'./layout/index/stories',
-		'./layout/index/news',
+		'./layout/slider',
+		'./layout/clients',
+		'./layout/stories',
+		'./layout/news',
 		'./layout/footer';
 //form
 @import './form/form',
