--- a/css/sass/layout/_section.scss
+++ b/css/sass/layout/_section.scss
@@ -7,7 +7,7 @@ section
 	    text-align: center;
 	    display: inline-block;
 	}
-	.time
+	@at-root .time
 	{
 		color:rgba($text-color,0.5);
 		margin-top: 10px;
