--- a/pug/components/var.pug
+++ b/pug/components/var.pug
@@ -1,6 +1,6 @@
 - const title = 'Mitalent'
 - const themeColor = '#39b3f1'
-- const icon = '#!'
+- const icon = 'icon-192.png'
 - const description = 'description'
 - const keyword = 'keyword'
 - const fonts = [{comment:'google fonts api', href:'https://fonts.googleapis.com/css?family=Amaranth:700|Raleway'}]
@@ -8,7 +8,7 @@
 
 
 
-- const navList = [{title:'home', href:'/', active:'active'},{title:'about', href:'about.html'}, {title:'clients', href:'clients.html'}, {title:'news', href:'news.html'}, {title:'profile', href:'profile.html'}, {title:'blog', href:'blog.html'}, {title:'contact', href:'contact.html'}]
+- const navList = [{title:'home', href:'index.html'},{title:'about', href:'about.html'}, {title:'clients', href:'clients.html'}, {title:'news', href:'news.html'}, {title:'profile', href:'profile.html'}, {title:'blog', href:'blog.html'}, {title:'contact', href:'contact.html'}]
 - const navItems = [{title:'clients', href:'clients.html'},{title:'news', href:'news.html'}]
 
 
@@ -17,17 +17,15 @@
 
 
 - const clientsFilter = ['all', 'actor', 'musician', 'comdian', 'model']
-- const clients = [{id:"#!",job:'comdian', name:'keith ruiz', img:'./img/slider-1.jpg'}, {id:"#!",job:'actor', name:'ahmed ruiz', img:'./img/slider-2.jpg'}, {id:"#!",job:'musician', name:'super ahmed', img:'./img/slider-3.jpg'}, {id:"#!",job:'model', name:'super hero', img:'./img/slider-4.jpg'}, {id:"#!",job:'comdian', name:'keith ruiz', img:'./img/slider-1.jpg'}, {id:"#!",job:'actor', name:'ahmed ruiz', img:'./img/slider-2.jpg'}, {id:"#!",job:'musician', name:'super ahmed', img:'./img/slider-3.jpg'}, {id:"#!",job:'model', name:'super hero', img:'./img/slider-4.jpg'}]
+- const clients = [{id:"#!",job:'comdian', name:'keith ruiz', img:'./img/slider-1.jpg'}, {id:"#!",job:'actor', name:'ahmed ruiz', img:'./img/slider-2.jpg'}, {id:"#!",job:'musician', name:'super ahmed', img:'./img/slider-3.jpg'}, {id:"#!",job:'model', name:'super hero', img:'./img/slider-4.jpg'}, {id:"#!",job:'comdian', name:'keith ruiz', img:'./img/slider-1.jpg'}, {id:"#!",job:'actor', name:'ahmed ruiz', img:'./img/slider-2.jpg'}, {id:"#!",job:'musician', name:'super ahmed', img:'./img/slider-3.jpg'}, {id:"#!",job:'model', name:'super hero', img:'./img/slider-4.jpg'},{id:"#!",job:'model', name:'super heros', img:'./img/slider-4.jpg'}]
 
 
 
-- const storiesList = [{id:'#!', img:'./img/slider-1.jpg', title: '5 reasons to keep your beauty salon reservation', time:'8 march, 2020'}, {id:'#!', img:'./img/slider-2.jpg', title: 'benjamin franklin method of habit formation', time:'8 march, 2023'}, {id:'#!', img:'./img/slider-3.jpg', title: '29 mativational quotes for business', time:'8 march, 2022'}]
+- const storiesList = [{id:'#!', img:'./img/slider-1.jpg', title: '5 reasons to keep your beauty salon reservation', time:'8 march, 2020'}, {id:'#!', img:'./img/slider-2.jpg', title: 'benjamin franklin method of habit formation', time:'8 march, 2023'}, {id:'#!', img:'./img/slider-3.jpg', title: '29 mativational quotes for business', time:'8 march, 2022'}, {id:'#!', img:'./img/slider-4.jpg', title: '29 mativational quotes for business', time:'8 march, 2022'}]
 
 
 
-
-- const trending = {id:'#!', img:'./img/slider-1.jpg', title: 'use your reset button to change your vibration', time:'8 march, 2020'}
-- const newsList = [{id:'#!', img:'./img/slider-1.jpg', title: '5 reasons to keep your beauty salon reservation', time:'8 march, 2020'}, {id:'#!', img:'./img/slider-2.jpg', title: 'benjamin franklin method of habit formation', time:'8 march, 2023'}, {id:'#!', img:'./img/slider-3.jpg', title: '29 mativational quotes for business', time:'8 march, 2022'}]
+- const newsList = [{id:'#!', img:'./img/slider-1.jpg', title: '5 reasons to keep your beauty salon reservation', time:'8 march, 2020'}, {id:'#!', img:'./img/slider-2.jpg', title: 'benjamin franklin method of habit formation', time:'8 march, 2023'}, {id:'#!', img:'./img/slider-4.jpg', title: '29 mativational quotes for business', time:'8 march, 2022'}, {id:'#!', img:'./img/slider-3.jpg', title: '29 mativational quotes for business', time:'8 march, 2022'}]
 
 
 
