--- a/pug/layout/header-home.pug
+++ b/pug/layout/header-home.pug
@@ -6,7 +6,7 @@ header
 		start top bar
 		=============
 	div(class="top-bar d-flex align-items-start")
-		include nav
+		include nav/nav-home
 		// ========== start search========
 		div(class="search d-flex")
 			div(class="container")
@@ -15,7 +15,7 @@ header
 	// ================
 		start top bar
 		=============
-	include slider
+	include slider/slider-home
 // =======================
 		end header
 	======================
