--- a/pug/layout/main-home.pug
+++ b/pug/layout/main-home.pug
@@ -2,9 +2,9 @@
 		start main
 	======================
 main
-	include clients
-	include stories
-	include index-news
+	include clients/clients
+	include stories/stories
+	include news/news
 // =======================
 		end main
 	======================
