--- a/pug/layout/nav/nav-home.pug
+++ b/pug/layout/nav/nav-home.pug
@@ -1,7 +1,8 @@
 // ========== start nav========
+-let navActive = 'home'
 nav(class="navbar align-items-start")
 	.container
-		include nav/navbar
-		include nav/items
-		include nav/brand
+		include navbar
+		include items
+		include brand
 // ========== end nav========
