--- a/css/index.css
+++ b/css/index.css
@@ -367,8 +367,8 @@ nav .navbar-collapse .nav-item {
 ======================*/
 header {
   position: relative;
-  min-height: 600px;
-  height: 600px;
+  min-height: 700px;
+  height: 700px;
   height: 100vh;
   background-color: #fff;
   overflow: hidden;
@@ -408,7 +408,7 @@ section .title-h {
   text-align: center;
   display: inline-block;
 }
-section .time {
+.time {
   color: rgba(26, 26, 29, 0.5);
   margin-top: 10px;
   display: inline-block;
@@ -420,6 +420,7 @@ section .time {
   left: 0;
   right: 0;
 }
+
 section .page-link {
   line-height: 1.5;
   color: rgba(26, 26, 29, 0.5);
@@ -515,13 +516,13 @@ section .page-link:hover {
 .slider .socal-links .line {
   display: block;
   width: 2px;
-  height: 15%;
+  height: 10%;
   background-color: #1a1a1d;
-  margin: 2em 1.5em;
+  margin: 1em 1.5em;
 }
 .slider .socal-links:after {
   content: attr(data-number);
-  padding: 0.5em 1em;
+  padding: 0em 1em;
   display: inline-block;
   -webkit-transform: rotate(-90deg);
   -o-transform: rotate(-90deg);
@@ -896,8 +897,8 @@ section .page-link:hover {
 .news {
   height: 100%;
 }
-.news .up {
-  margin-top: -120px;
+.news .down {
+  margin-bottom: -120px;
 }
 .news .trend:before {
   content: "trending";
@@ -947,7 +948,6 @@ section .page-link:hover {
   padding: 1em;
 }
 .news .carousel,
-.news .blog-play,
 .news .carousel-inner {
   height: 100%;
 }
@@ -1042,18 +1042,23 @@ section .page-link:hover {
 .news #news-slider figcaption {
   height: 15%;
 }
-.news #blog-slider .carousel-indicators,
+.news #blog-play {
+  min-height: 400px;
+  height: 400px;
+  height: 100%;
+}
+.news #blog-play .carousel-indicators,
 .news #post-slider .carousel-indicators {
   height: 100%;
   top: 0;
   bottom: 0;
   left: auto;
 }
-.news #blog-slider img,
+.news #blog-play img,
 .news #post-slider img {
   height: 100%;
 }
-.news #blog-slider figcaption,
+.news #blog-play figcaption,
 .news #post-slider figcaption {
   position: absolute;
   color: rgba(255, 255, 255, 0.7);
