--- a/css/sass/layout/_news.scss
+++ b/css/sass/layout/_news.scss
@@ -3,9 +3,9 @@
 ======================*/
 .news
 {
-	.up
+	.down
 	{
-		margin-top: -120px;
+		margin-bottom: -120px;
 	}
 	.trend
 	{
@@ -70,7 +70,6 @@
 	}
 	//slider	
 	.carousel,
-	.blog-play,
 	.carousel-inner
 	{
 		height: 100%;
@@ -162,7 +161,13 @@
 			height: 15%;
 		}
 	}
-	#blog-slider,
+	#blog-play
+	{
+		min-height: 400px;
+		height:400px;
+		height:100%;
+	}
+	#blog-play,
 	#post-slider
 	{
 		.carousel-indicators
