--- a/css/sass/news.scss
+++ b/css/sass/news.scss
@@ -19,10 +19,10 @@ $dir:ltr;
 @import './layout/nav',
 		'./layout/header',
 		'./layout/section',
-		'./layout/index/stories',
-		'./layout/index/news',
-		'./layout/index/clients',
-		'./layout/news/nav',
+		'./layout/stories',
+		'./layout/news',
+		'./layout/clients',
+		'./layout/overlay/nav',
 		'./layout/footer';
 		
 //form
