--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,24 +1,10 @@
-include components/var
-doctype html
-html(lang="en")
-	head
-		include components/head
-		// index style
-		link(rel="stylesheet" type="text/css" href="css/index.css")
-	body
-		include components/preload
-		// =======================
-			start container
-			======================
-		.container-fluid
-			// message for old browser
-			div(class="alert alert-danger m-0" id="alert" role="alert" style="display: none;")
-				| your browser is old
+extends layout
 
-			include layout/header
-			include layout/main
-			include components/footer
-		// =======================
-			end container
-			======================
-		include components/script
+block style
+	// index style
+	link(rel="stylesheet" type="text/css" href="css/index.css")
+
+block content
+	include layout/header-home
+	include layout/main-home
+	include layout/footer
