--- a/pug/layout/clients/clients.pug
+++ b/pug/layout/clients/clients.pug
@@ -9,19 +9,10 @@ section(class="clients pt-5 pb-5")
 		// start clients grid 
 		div(class="clients-item mt-5")
 			div(class="row m-0")
-				each client in clients
-					div(class="p-0 col-12 col-md-6 col-lg-4 col-xl-3")
-						div(class="client", data-filter=`${client.job}`)
-							figure
-								img(src=`${client.img}`, alt=`${client.name}`, title=`${client.job}`)/
-								figcaption
-									a(href=`${client.id}`,
-										class="client-link",
-										aria-label="client-profile")
-										<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-									div(class="client-title")
-										h4= `${client.name}`
-										span= `${client.job}`
+				-for(let i=0; i<=7; i++)
+					-let client = clients[i]
+						div(class="p-0 col-12 col-md-6 col-lg-4 col-xl-3")
+							include client
 		// end clients grid 
 		button(type="button",
 				class="btn btn-primary text-uppercase") explore more
