--- a/src/sass/components/_normalize.scss
+++ b/src/sass/components/_normalize.scss
@@ -52,4 +52,9 @@ figure
     margin:0;
     padding:0;
 }
+.bg-main
+{
+    background-color:$main-color;
+   color:$white-color;
+}
 /*=== end default style */
